# PyFLP

./: .all-contributorsrc  .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO  TODO.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  test_parser.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dev.yml  main.yml  publish.yml  test.yml
doc/: flp-format.md  how-does-it-work.md
docs/: api.md  api.rst  architecture.rst  arrangements.rst  channels.rst  conf.py  contributing.md  contributing.rst  controllers.rst  dev.rst  faq.rst  features.rst  flp-format.md  getting-started.md  guides.rst  handbook.md  handbook.rst  helping.rst  how-does-it-work.md  index.html  index.md  index.rst  installation.md  installation.rst  limitations.rst  mixer.rst  models.md  modules.rst  patterns.rst  plugins.rst  project.rst  pyflp.event.rst  pyflp.flobject.arrangement.rst  pyflp.flobject.channel.rst  pyflp.flobject.insert.rst  pyflp.flobject.misc.rst  pyflp.flobject.pattern.rst  pyflp.flobject.plugin.effects.rst  pyflp.flobject.plugin.rst  pyflp.flobject.rst  (+7 more)
docs/architecture/: flp-format.rst  how-it-works.rst  reference.rst
docs/contributing/: about-descriptors.rst  about-events.rst  about-models.rst  implementing-a-plugin.rst  making-a-pr.rst  sphinx-conf.rst  unit-testing.rst  vscode-integration.rst  writing-docs.rst
docs/dev/: plugin.rst  reversing.rst
docs/guides/: plugin.rst  reversing.rst
docs/pyflp/: bytesioex.html  conftest.html  event.html  flobject.html  parser.html  project.html  utils.html
docs/pyflp/event/: byte_event.html  data_event.html  dword_event.html  event.html  text_event.html  word_event.html
docs/pyflp/flobject/: arrangement.html  channel.html  flobject.html  insert.html  misc.html  pattern.html  plugin.html
docs/reference/: api.md  arrangement.md  arrangements.md  arrangements.rst  channel.md  channels.rst  constants.md  controller.md  controllers.md  controllers.rst  event.md  events.rst  exceptions.md  exceptions.rst  flobject.md  flp-format.md  insert.md  misc.md  mixer.md  mixer.rst  parser.md  pattern.md  patterns.rst  plugin.md  plugins.md  plugins.rst  project.md  project.rst  properties.md  timemarkers.rst  utils.md  validators.md
docs/reference/arrangement/: arrangement.md  arrangement.rst  index.rst  playlist.md  playlist.rst  timemarker.md  track.md  track.rst
docs/reference/channel/: automation.rst  channel.md  channel.rst  delay.md  display-group.rst  filterchannel.md  fx.md  index.rst  instrument.rst  layer.rst  sampler.rst  shared.rst
docs/reference/event/: byte.md  data.md  dword.md  event.md  text.md  word.md
docs/reference/insert/: insert.md  slot.md
docs/reference/mixer/: index.rst  insert.rst  slot.rst
docs/reference/pattern/: note.md  pattern.md
docs/reference/patterns/: index.rst  pattern.rst
docs/reference/plugin/: balance.md  notebook2.md  soft_clipper.md  soundgoodizer.md  vst.md
docs/reference/plugins/: effects.rst  generators.rst  index.rst  vst.rst
docs/user-guide/: features.rst  helping-pyflp.rst  reading-docs.rst  vscode-integration.rst
pyflp/: __init__.py  _adapters.py  _base.py  _descriptors.py  _event.py  _events.py  _flobject.py  _models.py  _properties.py  _validators.py  arrangement.py  bytesioex.py  channel.py  conftest.py  constants.py  controller.py  controllers.py  enums.py  event.py  events.py  exceptions.py  flobject.py  misc.py  mixer.py  models.py  parser.py  pattern.py  plugin.py  project.py  properties.py  reader.py  timemarker.py  types.py  utils.py  validators.py  writer.py
pyflp/arrangement/: __init__.py  arrangement.py  playlist.py  timemarker.py  track.py
pyflp/channel/: __init__.py  arp.py  channel.py  delay.py  envlfo.py  filter.py  fx.py  level_offsets.py  levels.py  parameters.py  polyphony.py  tracking.py
pyflp/event/: __init__.py  byte.py  byte_event.py  data.py  data_event.py  dword.py  dword_event.py  event.py  text.py  text_event.py  word.py  word_event.py
pyflp/flobject/: __init__.py  arrangement.py  channel.py  filterchannel.py  flobject.py  insert.py  insertslot.py  misc.py  pattern.py  playlist.py  timemarker.py  track.py
pyflp/flobject/arrangement/: __init__.py  arrangement.py  enums.py  event_id.py  playlist.py  timemarker.py  track.py
pyflp/flobject/channel/: __init__.py  channel.py  channel_fx.py  delay.py  enums.py  event_id.py  filterchannel.py  fx.py
pyflp/flobject/insert/: __init__.py  enums.py  event.py  event_id.py  insert.py  insert_params.py  insert_params_event.py  insertslot.py  slot.py
pyflp/flobject/misc/: __init__.py  enums.py  event_id.py  misc.py
pyflp/flobject/pattern/: __init__.py  enums.py  event_id.py  note.py  pattern.py
pyflp/flobject/plugin/: __init__.py  balance.py  notebook_2.py  plugin.py  soft_clipper.py  soundgoodizer.py  vst.py  vst_plugin.py
pyflp/insert/: __init__.py  event.py  insert.py  parameters.py  slot.py
pyflp/pattern/: __init__.py  controller.py  note.py  pattern.py
pyflp/plugin/: __init__.py  _plugin.py  plugin.py  vst.py
pyflp/plugin/effects/: __init__.py  balance.py  fast_dist.py  notebook2.py  send.py  soft_clipper.py  soundgoodizer.py  stereo_enhancer.py
pyflp/plugin/synths/: __init__.py  boobass.py
scripts/flpinfo/: README.md  __main__.py  flpinfo.py
scripts/flpinspect/: README.md  __main__.py  gui_logger.py  inspector.py  treeview.py
tests/: __init__.py  conftest.py  test_arrangement.py  test_arrangements.py  test_channel.py  test_channels.py  test_corrupted.py  test_events.py  test_flobject.py  test_mixer.py  test_models.py  test_parser.py  test_pattern.py  test_plugin.py  test_project.py  test_reader.py  test_validators.py
tests/assets/: FL 20.8.3.flp  FL 20.8.4.flp  README.md
tests/assets/FL 20.8.3/: Empty.flp
tests/assets/FL 20.8.3.2304/: Empty.flp
tests/assets/channels/: +4800-cents.fst  -4800-cents.fst  100%-left.fst  (+28 more)
(+81 files in other folders)
