[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflp"
authors = [{ name = "demberto", email = "demberto@protonmail.com" }]
description = "FL Studio project file parser"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Multimedia",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
license = { text = "GPL-3.0" }
dependencies = [
  "colour>=0.1.5",
  "f-enum>=0.2.0;python_version<='3.10'",
  "construct-typing==0.5.3",
  "sortedcontainers>=2.4.0",
  "typing_extensions>=4.4.0",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/demberto/PyFLP"
Changelog = "https://github.com/demberto/PyFLP/blob/master/CHANGELOG.md"
Documentation = "https://pyflp.rtfd.io"
"Bug Tracker" = "https://github.com/demberto/PyFLP/issues"

[tool.coverage.run]
branch = true
parallel = true
omit = ["main.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",         # Have to re-enable the standard pragma
  "def __repr__",
  "\\.\\.\\.",                # Ellipsis operator used in protocols
  "if owner is None:",        # Descriptor __get__() checks
  "@(abc\\.)?abstractmethod", # "@abc.abstractmethod" or "@abstractmethod"
]
ignore_errors = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.7"
enable_incomplete_features = true
ignore_missing_imports = true
warn_no_return = false

[tool.pylint.design]
max-parents = 10

[tool.pylint.main]
fail-under = 9.5
jobs = 0            # Parallel execution
py-version = [3, 7] # ! Somehow this doesn't seem to work

[tool.pylint.'MESSAGE CONTROL']
disable = [
  "docstring-first-line-empty",
  "empty-comment",
  "eq-without-hash",
  "inherit-non-class",                            # https://github.com/PyCQA/pylint/issues/3505#issuecomment-1246655178
  "inconsistent-return-statements",
  "invalid-name",
  "line-too-long",                                # Black does this better
  "no-member",
  "no-self-use",
  "missing-class-docstring",
  "missing-function-docstring",
  "redefined-builtin",                            # Really a non issue in small scopes
  "too-few-public-methods",                       # Useless; PyFLP exploits descriptors
  "too-many-lines",
  "useless-parent-delegation",                    # This is bugged; an empty __init__ with a docstring doesn't call super()
  "using-final-decorator-in-unsupported-version",
  "while-used",
  "wrong-import-position",                        # isort is smart enough
]

[tool.pyright]
ignore = ["./venv"]
reportPrivateUsage = false
reportMissingTypeStubs = false
venvPath = "."
venv = "venv"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = "tests"

[tool.setuptools]
packages = ["pyflp"]

[tool.setuptools.dynamic]
version = { attr = "pyflp.__version__" }

[tool.tbump]
github_url = "https://github.com/demberto/PyFLP/"

[tool.tbump.version]
current = "2.0.0a6"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (.
    (?P<extra>.+)
  )?
  '''

[tool.tbump.git]
message_template = "version: bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyflp/__init__.py"
search = "__version__ = \"{current_version}\""

[[tool.tbump.file]]
src = "docs/conf.py"
search = "release = \"{current_version}\""

[[tool.tbump.before_commit]]
name = "check changelog"
cmd = "git grep -q {new_version} CHANGELOG.md"
