[metadata]
name = pyflp
version = 0.2.0
author = demberto
author_email = demberto@protonmail.com
description = Read and edit your FLPs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demberto/PyFLP
project_urls =
    Source = https://github.com/demberto/PyFLP
    Changelog = https://github.com/demberto/PyFLP/blob/master/CHANGELOG.md
    Documentation = https://pyflp.rtfd.io
    Bug Tracker = https://github.com/demberto/PyFLP/issues
    TODO = https://github.com/demberto/PyFLP/blob/master/TODO.md
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    bytesioex>=0.1.0
    dataclasses;python_version=='3.6'
