[metadata]
name = pyflp
version = 1.0.0
author = demberto
author_email = demberto@protonmail.com
description = An FL Studio project file (.flp) parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demberto/PyFLP
project_urls =
    Source = https://github.com/demberto/PyFLP
    Changelog = https://github.com/demberto/PyFLP/blob/master/CHANGELOG.md
    Documentation = https://pyflp.rtfd.io
    Bug Tracker = https://github.com/demberto/PyFLP/issues
    TODO = https://github.com/demberto/PyFLP/blob/master/TODO.md
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    bytesioex>=0.1.0
    colour
    dataclasses;python_version=='3.6'
