[metadata]
name = pyflp
version = file: VERSION
description = An FL Studio project file (.flp) parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demberto/PyFLP
author = demberto
author_email = demberto@protonmail.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/demberto/PyFLP
    Changelog = https://github.com/demberto/PyFLP/blob/master/CHANGELOG.md
    Documentation = https://pyflp.rtfd.io
    Bug Tracker = https://github.com/demberto/PyFLP/issues
    TODO = https://github.com/demberto/PyFLP/blob/master/TODO.md

[options]
packages = find:
install_requires =
    bytesioex>=0.1.2
    colour
    dataclasses;python_version=='3.6'
python_requires = >=3.6

[options.packages.find]
where = .
exclude = tests
